--- a/demo/makefile
+++ b/demo/makefile
@@ -10,7 +10,7 @@ SKETCH_O := $(SKETCH_C:.c=.o)
 # to squelch any internal command line output, set BL_QUIET=1
 # any print calls in your sketch will continue to work.
 default: main
-	@BL_QUIET=0 bash -c "./main"
+	@BL_QUIET=0 BL_SAVE_FRAMES=0 bash -c "./main"
 
 main: main.c $(SKETCH_O)
 	@$(CC) $(WARN) $(CFLAGS) -Iinclude main.c $(SKETCH_O) libs/bitlib.a -o main -lm $(CLIBS)
