make system installed libraries the standard way to use the libs.

--- a/demo/makefile
+++ b/demo/makefile
@@ -6,16 +6,16 @@ CC := gcc
 WARN := -Wno-unused-command-line-argument
 CFLAGS := `pkg-config --cflags gtk+-3.0`
 CLIBS := `pkg-config --libs gtk+-3.0`
-LIBS := libs/*
+BITLIB := -lbitlib
 SKETCH_O := $(SKETCH_C:.c=.o)
 
-# to squelch any internal command line output, set BL_QUIET=1
-# any print calls in your sketch will continue to work.
+# to hide the command line progress while rendering, set BL_QUIET to 1
+# to save the intermediate frames created when rendering a gif or video set BL_SAVE_FRAMES to 1
 default: main
 	@BL_QUIET=0 BL_SAVE_FRAMES=0 bash -c "./main"
 
 main: main.c $(SKETCH_O)
-	@$(CC) $(WARN) $(CFLAGS) -Iinclude main.c $(SKETCH_O) $(LIBS) -o main -lm $(CLIBS)
+	@$(CC) $(WARN) $(CFLAGS) -Iinclude main.c $(SKETCH_O) $(BITLIB) -o main -lm $(CLIBS)
 
 $(SKETCH_O): $(SKETCH_C)
 	@$(CC) $(WARN) $(CFLAGS) -Iinclude -c $(SKETCH_C) -lm $(CLIBS)
